--- a/qr.html
+++ b/qr.html
@@ -5,7 +5,8 @@
 </head>
 <body>
     <h1>VISPER-MD QR Code</h1>
-    <img src="/qr" alt="QR Code" style="width: 300px; height: 300px;">
+    <img src="/qr" alt="QR Code" style="width: 300px; height: 300px; border: 1px solid #ccc;">
     <p>ස්කෑන් කරන්න (Scan to Connect)</p>
+    <p>If QR doesn't load, refresh or check console.</p>
 </body>
 </html>
